01.31.2025

1. Inspect existence of vcgencmd in pi-thermal.sh.
2. Removed obsolete cvsup_ports.sh and cvsup_ports.sh.1.
3. Removed obsolete freebsd-update.8 and freebsd-update.sh.

11.30.2024

1. New list_verbose_qt_includes.bash.

06.02.2023

1. New git-pull-all.sh.

05.25.2023

1. New pi-thermal.sh.

08.05.2021

1. New user_home_directories.bash.

08.24.2019

1. New find_consecutive_empty_lines.bash.

04.28.2019

1. New maestro-debian.bash.

07.09.2017

1. Added freebsd-update.sh.

01.18.2015

1. Added recycle_swap.sh.

06.26.2014

1. Added postgresql_backup.sh.
2. Corrected the make file.

02.23.2014

1. Validate command results.

01.15.2011

1. Added man2pdf.sh and odt-reader.pdf, courtesy of matrobriva.
2. Added proper exit codes.

07.04.2010

1. Updated the secure_firefox_cleanup.sh script.

03.13.2009

1. Removed the backup.csh script.
2. The cvsup-ports.sh script shall now provide more detailed status
   information.

10.19.2008

1. The Makefile's install_manpages target now creates the required
   destination directories.
2. Updated secure_firefox_cleanup.sh in support of the wipe command.

09.28.2008

1. Modified the secure_firefox_cleanup scripts.

09.12.2008

1. Removed absolute paths from the cvsup-ports.sh script.
2. Updated the secure_firefox_cleanup*.sh scripts.

02.29.2008

1. Changed SCRIPTS101_DIR to SHUTS_DIR.
2. Other miscellaneous changes.

09.01.2007

1. Added an OS X-specific script.

07.20.2007

1. Added the FreeBSD-specific script cvsup-ports.sh.
2. Fixed a problem with secure_firefox_cleanup.sh.

07.18.2007

1. Included some information and support for OS X.

07.05.2007

1. Redirecting standard error to /dev/null.

05.27.2007

1. Updated secure_firefox_cleanup.sh.

03.18.2007

1. Updated secure_firefox_cleanup.sh.
2. Updated the manual pages.

02.27.2007

1. Some minor fixes in support of Solaris.
2. The Makefile has also been updated.
3. Version remains at 1.01.

02.24.2007

1. Created Makefile.