@@ -1,7 +1,7 @@
 #!/usr/bin/env sh
 # Alexis Megas, 2014.
 
-pgdumpallfile="`which pg_dumpall 2> /dev/null`"
+pgdumpallfile="$(which pg_dumpall 2> /dev/null)"
 
 if [ ! -r "$pgdumpallfile" -o ! -x "$pgdumpallfile" ]
 then
@@ -9,7 +9,10 @@ then
     exit 1
 fi
 
-$pgdumpallfile "$@" --clean --file=pg_dumpall.$$ --host=localhost \
+$pgdumpallfile "$@" \
+	       --clean \
+	       --file=pg_dumpall.$$ \
+	       --host=localhost \
 	       --password 2>/dev/null
 
 if [ ! $? -eq 0 ]
