@@ -1,26 +1,0 @@
-.TH secure_firefox_cleanup.sh 1 "April 21, 2010"
-.SH NAME
-secure_firefox_cleanup.sh
-.SH SYNOPSIS
-.B secure_firefox_cleanup.sh [options]
-.SH DESCRIPTION
-.B secure_firefox_cleanup.sh
-is a script that securely deletes certain files in the Firefox directory.
-The files marked for deletetion are: Cache,
-Cache.Trash, blocklist.xml, bookmarkbackups, cookies.*, downloads.*,
-formhistory.dat, history.dat, places.*, sessionstore.*, search.json,
-secmod.db, urlclassifier*.*, and *.sqlite.
-The script supports both interactive and non-interactive modes.
-.SH OPTIONS
-.IP "-d FIREFOX_DIR"
-Use FIREFOX_DIR as the Firefox directory.
-.IP "-p bcwipe|rm|srm|wipe"
-Specify which program to use for file removal.
-.SH FILES
-functions.sh
-.SH BUGS
-You may encounter problems running in interactive mode on OS X due to
-directory names having spaces. Other operating systems may encounter
-similar problems.
-.SH AUTHOR(S)
-.B Alexis Megas
