@@ -1,14 +1,0 @@
-.TH secure_firefox_cleanup_osx.sh 1 "October 24, 2008"
-.SH NAME
-secure_firefox_cleanup_osx.sh
-.SH SYNOPSIS
-.B secure_firefox_cleanup_osx.sh
-.SH DESCRIPTION
-.B secure_firefox_cleanup_osx.sh
-is a script that securely deletes certain files in the Firefox
-directory. The files marked for deletetion are: Cache,
-Cache.Trash, blocklist.xml, bookmarkbackups, cookies.*, downloads.rdf,
-formhistory.dat, history.dat, minidumps, places.*, sessionstore.*,
-signons3.txt, urlclassifier*.*, and *.sqlite.
-.SH AUTHOR(S)
-.B Alexis Megas
