@@ -1,8 +1,15 @@
 01.31.2025
 
 1. Inspect existence of vcgencmd in pi-thermal.sh.
-2. Removed obsolete cvsup_ports.sh and cvsup_ports.sh.1.
-3. Removed obsolete freebsd-update.8 and freebsd-update.sh.
+2. Removed obsolete manuals and scripts:
+   cvsup_ports.sh
+   cvsup_ports.sh.1
+   freebsd-update.8
+   freebsd-update.sh
+   secure_firefox_cleanup.sh
+   secure_firefox_cleanup.sh.1
+   secure_firefox_cleanup_osx.sh
+   secure_firefox_cleanup_osx.sh.1
 
 11.30.2024
 
